RESOLVED FIXED 241269
[GTK] Fix a couple clang warnings related with DESTINATION_COLOR_SPACE_LINEAR_SRGB and atspi
https://bugs.webkit.org/show_bug.cgi?id=241269
Summary [GTK] Fix a couple clang warnings related with DESTINATION_COLOR_SPACE_LINEAR...
Philippe Normand
Reported 2022-06-03 08:42:03 PDT
ssia
Attachments
Philippe Normand
Comment 1 2022-06-03 08:45:24 PDT
EWS
Comment 2 2022-06-03 10:12:12 PDT
Committed r295216 (251273@main): <https://commits.webkit.org/251273@main> Reviewed commits have been landed. Closing PR #1273 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.