[GTK] Fix a couple clang warnings related with DESTINATION_COLOR_SPACE_LINEAR_SRGB and atspi https://bugs.webkit.org/show_bug.cgi?id=241269

Patch by Philippe Normand <philn@igalia.com> on 2022-06-03
Reviewed by Michael Catanzaro.

* Source/WebCore/accessibility/atspi/AXObjectCacheAtspi.cpp:
(WebCore::AXObjectCache::postPlatformNotification): Add switch case for AXHasPopupChanged, stubbed for now.
* Source/WebCore/platform/graphics/cairo/ImageBufferCairoBackend.cpp:
(WebCore::ImageBufferCairoBackend::transformToColorSpace): makr newColorSpace as unused when
DESTINATION_COLOR_SPACE_LINEAR_SRGB is disabled.
* Source/WebCore/rendering/svg/RenderSVGResourceMasker.cpp:
(WebCore::RenderSVGResourceMasker::applyResource): Move svgStyle declaration to
DESTINATION_COLOR_SPACE_LINEAR_SRGB code path.

Canonical link: https://commits.webkit.org/251273@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295216 268f45cc-cd09-0410-ab3c-d52691b4dbfc